# flask-todo

./: .gitignore  PROMPT.md  README.md  diagrams.puml  gunicorn_config.py  pyproject.toml
app/: __init__.py  models.py  routes.py
app/static/css/: style.css
app/templates/: base.html  index.html
deploy/: setup.sh
infrastructure/: README.md  app.py  cdk.json
