[tool.poetry]
name = "flask-todo"
version = "0.1.0"
description = "A modern TODO list application"
authors = ["User"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.1.0"
flask-sqlalchemy = "^3.1.1"
python-dotenv = "^1.0.1"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
